k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gds
  labels:
    name: gds
    app: gds
