k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gds-backend-ingress
  namespace: gds
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - devapi.gds.proepi.org.br
    secretName: gds-backend-tls
  rules:
  - host: devapi.gds.proepi.org.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gds-backend
            port:
              number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gds-frontend-ingress
  namespace: gds
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dev.gds.proepi.org.br
    secretName: gds-frontend-tls
  rules:
  - host: dev.gds.proepi.org.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gds-frontend
            port:
              number: 80
